syntax = "proto3";
// import "google/api/annotations.proto";
package io.openliberty.guides.system;
option java_multiple_files = true;

service SystemService {
    // unary
    // original system inv or graphql
    // resembles rest api
    rpc getSystem (SystemServiceRequest) returns (SystemServiceResponse) {}
}

message SystemServiceResponse {
    string os = 1;
    string javaVersion = 2;
}

message SystemServiceRequest {}
